//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table UserAccount {
  id String [pk]
  user User
  userId String
  userUid String
  providerName String
  providerType AccountProviderTypeEnum [not null, default: 'NONE']
  providerId String
  providerAccountId String
  refreshToken String
  accessToken String
  accessTokenExpires DateTime
  signedIn DateTime [default: `now()`, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdUserId String
  updatedUserId String

  indexes {
    (providerId, providerAccountId) [unique]
  }
}

Table UserDevice {
  id String [pk]
  user User [not null]
  userId String [not null]
  deviceOs String [not null]
  deviceType String [not null]
  deviceName String [not null]
  isActive Boolean [not null, default: true]
  sessions UserSession [not null]
}

Table UserSession {
  id String [pk]
  user User [not null]
  userId String [not null]
  device UserDevice [not null]
  deviceId String [not null]
  fcmToken String
  isActive Boolean [not null, default: true]
  expires String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table User {
  id String [pk]
  userId String [unique]
  role UserRoleEnum [not null, default: 'USER']
  status UserStatusEnum
  password String
  email String [unique]
  emailConfirmCode String
  isEmailConfirmed Boolean [not null, default: false]
  countryCode String [default: '976']
  phone String
  phoneConfirmCode String
  isPhoneConfirmed Boolean [not null, default: false]
  profile UserProfile
  address Address
  accounts UserAccount [not null]
  devices UserDevice [not null]
  sessions UserSession [not null]
  books Book [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdUserId String
  updatedUserId String

  indexes {
    (countryCode, phone) [unique]
  }
}

Table UserProfile {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  firstName String
  lastName String
  gender Gender [default: 'NONE']
  birthday DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdUserId String
  updatedUserId String
}

Table Address {
  id String [pk]
  user User [not null]
  userId String [unique, not null]
  city String [not null]
  district String [not null]
  address1 String [not null]
  address2 String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Book {
  id String [pk]
  bookId String
  name String [not null]
  limit Int [not null]
  category String [not null]
  price Int [not null]
  image String
  publisher String [not null]
  bestSeller Boolean [not null, default: false]
  user User [not null]
  userId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdUserId String
  updatedUserId String
}

Enum AccountProviderTypeEnum {
  NONE
  EMAIL
  PHONE
  FACEBOOK
  APPLE
  GOOGLE
  TWITTER
}

Enum Gender {
  NONE
  MALE
  FEMALE
}

Enum UserRoleEnum {
  ADMIN
  USER
}

Enum UserStatusEnum {
  ACTIVE
  INACTIVE
}

Enum FileSizeEnum {
  NATIVE
  MEDIUM
  SMALL
  THUMB
}

Enum TokenVerifyEnum {
  AUTH
  RESET
}

Ref: UserAccount.userId > User.id

Ref: UserDevice.userId > User.id

Ref: UserSession.userId > User.id

Ref: UserSession.deviceId > UserDevice.id

Ref: UserProfile.userId - User.id

Ref: Address.userId - User.id

Ref: Book.userId > User.id